@@ -1,0 +1,2 @@
+lowertri <- function(x)
+  x[lower.tri(x)]
